[package]
name = "rkafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "rkafka"
path = "./src/lib.rs"

[[bin]]
name = "codecrafters-kafka"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
